@@ -1,6 +1,7 @@
 2006-07-21  MenTaLguY  <mental@rydia.net>
 
-	* src/document-subset.cpp, src/selection.cpp, src/selection.h,
+	* src/document-subset.cpp, src/object-hierarchy.cpp,
+	  src/object-hierarchy.h, src/selection.cpp, src/selection.h,
 	  src/ui/view/edit-widget.cpp, src/ui/view/edit-widget.h,
 	  src/uri-references.cpp, src/uri-references.h:
 	
